wip (code clean-up)