@@ -1,10 +1,9 @@
 package com.github.thenestruo.msx.msxbiostools.fields;
 
-import com.github.thenestruo.msx.msxbiostools.support.MsxBiosViewer;
-import com.github.thenestruo.msx.msxbiostools.support.Patcher;
+import com.github.thenestruo.msx.msxbiostools.support.Msx1BiosPatcher;
 import com.github.thenestruo.msx.msxbiostools.utils.Msx;
 
-public class BorderColor extends MsxBiosViewer implements Patcher {
+public class BorderColor extends Msx1BiosPatcher {
 
 	public static final BorderColor INSTANCE = new BorderColor();
 
@@ -19,23 +18,16 @@ public class BorderColor extends MsxBiosViewer implements Patcher {
 	}
 
 	@Override
-	public boolean canView(final byte[] bios) {
-
-		if (!super.canView(bios)) {
-			return false;
-		}
-		final byte value = bios[Msx.BDRCLR - Msx.RDPRIM + 0x7f27];
-		return (value >= (byte) 0x00) && (value <= (byte) 0x0f);
-	}
-
-	@Override
 	public String getValue(final byte[] bios) {
 
 		final byte value = bios[Msx.BDRCLR - Msx.RDPRIM + 0x7f27];
+		if ((value < (byte) 0x00) || (value > (byte) 0x0f)) {
+			// Invalid value
+			return null;
+		}
+
 		final int iValue = Byte.toUnsignedInt(value);
-		return (value >= (byte) 0x00) && (value <= (byte) 0x0f)
-				? String.format("COLOR ,,%d", iValue)
-				: String.format("unknown BDRCLR (%02x)", value);
+		return "COLOR ,,%d".formatted(iValue);
 	}
 
 	@Override
