@@ -24,8 +24,8 @@ public class Screen0Width extends MsxBiosViewer implements Patcher {
 		final byte value = bios[Msx.LINL40 - Msx.RDPRIM + 0x7f27];
 		final int iValue = Byte.toUnsignedInt(value);
 		return (iValue > 0 && value <= 80)
-				? String.format("WIDTH %d", iValue)
-				: String.format("unknown WIDTH (%02x)", value);
+				? "WIDTH %d".formatted(iValue)
+				: "unknown WIDTH (%02x)".formatted(value);
 	}
 
 	@Override
